octopus-android match availiable

--- a/octopus-frontend/octopus-android/app/src/main/res/values/strings.xml
+++ b/octopus-frontend/octopus-android/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
-    <string name="app_name">octopus-android</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="app_name">Octopus</string>
+
+    <string name="title_match">比赛</string>
+    <string name="title_follow">关注</string>
+    <string name="title_profile">我的</string>
+    <string name="n_matches">%d场比赛</string>
+
 </resources>
